// file: health/proto/requests/watch_request.proto
//
// Watch request message definition for streaming health updates
//

edition = "2023";

package gcommon.v1.health;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/health/proto";

message WatchRequest {
  // Service name to watch (empty for all services)
  string service = 1;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 2;
}
