// file: queue/proto/messages/message_nack.proto
// version: 1.0.0
// guid: b5bb9e75-3346-4684-9529-764a3cdb3e3d

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "pkg/queue/proto/nack_error_category.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

message MessageNack {
  // Message identifier
  string message_id = 1;

  // Message delivery tag
  string delivery_tag = 2;

  // Partition ID containing the message
  int32 partition_id = 3;

  // Message offset
  int64 message_offset = 4;

  // Reason for negative acknowledgment
  string nack_reason = 5;

  // Error category for the nack
  NackErrorCategory error_category = 6;

  // Specific error code
  string error_code = 7;

  // Retry this specific message
  bool retry_message = 8;

  // Custom retry delay for this message (milliseconds)
  int64 retry_delay_ms = 9;

  // Message-specific metadata
  map<string, string> message_metadata = 10;
}
