// file: proto/gcommon/v1/health/services/health_service.proto
// version: 1.0.0
// guid: 8192031a-2536-4567-1234-890123456789

edition = "2023";

package gcommon.v1.health;

import "gcommon/v1/health/requests/health_check_request.proto";
import "gcommon/v1/health/requests/readiness_check_request.proto";
import "gcommon/v1/health/responses/health_check_response.proto";
import "gcommon/v1/health/responses/readiness_check_response.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/health";

/**
 * HealthService provides health checking capabilities for services and components.
 * Supports various types of health checks including basic health, readiness, and liveness.
 * Follows 1-1-1 pattern: one service per file.
 */
service HealthService {
  // Check performs a health check for a specific service or component
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  // CheckReadiness verifies if a service is ready to handle requests
  rpc CheckReadiness(ReadinessCheckRequest) returns (ReadinessCheckResponse);

  // StreamHealth returns a stream of health check results
  rpc StreamHealth(HealthCheckRequest) returns (stream HealthCheckResponse);
}